# mcp-codesearch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/mcp_codesearch/: __init__.py  __main__.py  app.py  constants.py  helpers.py  server.py  settings.py  singletons.py
src/mcp_codesearch/indexer/: __init__.py  change_detect.py  chunker.py  discovery.py  notebook.py  treesitter.py
src/mcp_codesearch/search/: __init__.py  preprocess.py  query.py
src/mcp_codesearch/services/: __init__.py  indexing_service.py  search_service.py
src/mcp_codesearch/storage/: __init__.py  qdrant.py
src/mcp_codesearch/tools/: __init__.py  _errors.py  collections.py  indexing.py  search.py  similar.py
tests/: conftest.py  test_change_detect.py  test_changed_files.py  test_chunker.py  test_cleanup_orphans_unit.py  test_discovery.py  test_errors.py  test_exact_match_fast_path.py  test_filter_pushdown.py  test_indexing_service.py  test_main.py  test_notebook.py  test_preprocess.py  test_property_based.py  test_query.py  test_search_multiple.py  test_security.py  test_server.py  test_sparse.py  test_stress.py  test_tool_error_handler.py  test_treesitter.py  test_vector_core_dependency.py
tests/integration/: __init__.py  conftest.py  test_error_paths.py  test_indexing_integration.py  test_qdrant_storage.py  test_server_integration.py
